Changelog
=========

1.2 (unreleased)
----------------

- Fix migrating users whose username is the beginning of another username [elioschmutz]

- Implement group members migration [elioschmutz]

- Drop Plone 4.1 support. [jone]


1.1 (2015-04-17)
----------------

- Add option to only display a summary of the migration results.
  [lgraf]

- Add logging of detailed migration results to logfile (optional).
  [lgraf]

- Add migration for global roles (portal_role_manager).
  [lgraf]

- Add support for pre- and post-migration hooks.
  [lgraf]

- Make sure `Migrations` field always uses the CheckBoxFieldWidget.
  [lgraf]

- Use transaction.doom() for dry runs.
  This ensures that even an accidental commit() can't result in a DB write.
  [lgraf]

- Add support for programmatically providing principal mappings
  by registering an IPrincipalMappingSource named adapter.
  [lgraf]

- Rename `user` to `principal` where applicable:
  Most of the operations work for groups as well as for users.
  Therefore the mapping can contain principal IDs, not just
  user IDs.
  [lgraf]


1.0 (2014-06-16)
----------------

- Initial release