@@ -4,6 +4,8 @@ Changelog
 1.2 (unreleased)
 ----------------
 
+- Implement loginnames migration step [elioschmutz]
+
 - Fix migrating users whose username is the beginning of another username [elioschmutz]
 
 - Implement group members migration [elioschmutz]
